fix chat width on mobile

--- a/frontend/src/app/components/game/game.component.css
+++ b/frontend/src/app/components/game/game.component.css
@@ -19,6 +19,11 @@
   padding: 16px;
 }
 
+#game_control_bar {
+  display: block;
+  overflow: auto;
+}
+
 .board_show_guide {
   max-height: 72vh !important;
   padding: 32px;
